// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/thumbnail-card/ThumbnailCard should pass down actionItem, icon, and subtitle 1`] = `
<div
  className="thumbnail-card"
  role="button"
  tabIndex={0}
>
  <ThumbnailCardThumbnail
    thumbnail={
      <div>
        Foo Bar!
      </div>
    }
  />
  <ThumbnailCardDetails
    actionItem={
      <button
        type="button"
      >
        Click Me
      </button>
    }
    icon={
      <img
        alt="icon"
      />
    }
    subtitle={
      <div>
        Subtitle!
      </div>
    }
    title={
      <div>
        Hello World!
      </div>
    }
  />
</div>
`;

exports[`components/thumbnail-card/ThumbnailCard should render 1`] = `
<div
  className="thumbnail-card"
  role="button"
  tabIndex={0}
>
  <ThumbnailCardThumbnail
    thumbnail={
      <div>
        Foo Bar!
      </div>
    }
  />
  <ThumbnailCardDetails
    title={
      <div>
        Hello World!
      </div>
    }
  />
</div>
`;

exports[`components/thumbnail-card/ThumbnailCard should use additional className 1`] = `
<div
  className="thumbnail-card fooBar"
  role="button"
  tabIndex={0}
>
  <ThumbnailCardThumbnail
    thumbnail={
      <div>
        Foo Bar!
      </div>
    }
  />
  <ThumbnailCardDetails
    title={
      <div>
        Hello World!
      </div>
    }
  />
</div>
`;
